<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/NumVal"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/NumVal"
        android:inputType="number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/NumVal"
        android:layout_marginTop="125dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="99dp" />

    <Button
        android:id="@+id/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Devision"
        android:layout_alignTop="@+id/Subtract"
        android:onClick="Add"
        android:text="@string/Add"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/Subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LogVal"
        android:layout_alignTop="@+id/Multiply"
        android:onClick="subtract"
        android:text="@string/Subtract"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/Multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/NumVal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:onClick="multiply"
        android:text="@string/Multiply"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="155dp" />

    <Button
        android:id="@+id/Devision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/NumVal"
        android:layout_centerVertical="true"
        android:onClick="devide"
        android:text="@string/Division"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/LogVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="logrithm"
        android:text="@string/log"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/NumVal"
        android:layout_centerVertical="true"
        android:onClick="clear"
        android:text="@string/Clear"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:onClick="Calculate"
        android:text="@string/Submit"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="423dp" />

    <Button
        android:id="@+id/Color"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:onClick="ChangeColor"
        android:text="@string/Color"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="502dp" />
</RelativeLayout>